ajustes e uso dos dados do CURU verdadeiros
