# internal/api/routes/routes.go
@@ -6,7 +6,7 @@ import (
 	"gorm.io/gorm"
 
 	// Swagger imports
-	_ "github.com/guiezz/regioes-hidrograficas-api/docs" // <--- IMPORTANTE: Importa a pasta docs que será criada
+	_ "github.com/guiezz/regioes-hidrograficas-api/docs"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
@@ -16,6 +16,7 @@ func RegisterRoutes(r *gin.Engine, db *gorm.DB) {
 	dashboardHandler := handler.NewDashboardHandler(db)
 	contentHandler := handler.NewContentHandler(db)
 	actionHandler := handler.NewActionHandler(db)
+	financeiroHandler := handler.NewFinanceiroHandler(db)
 
 	// Rota da Documentação
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
@@ -29,5 +30,10 @@ func RegisterRoutes(r *gin.Engine, db *gorm.DB) {
 		api.GET("/dashboard/consolidated", dashboardHandler.GetConsolidated)
 		api.GET("/actions", actionHandler.GetActions)
 		api.GET("/actions/filters", actionHandler.GetFilters)
+		financeiro := api.Group("/financeiro")
+		{
+			financeiro.GET("/custos", financeiroHandler.GetCustos)
+			financeiro.GET("/matriz", financeiroHandler.GetMatriz)
+		}
 	}
 }
